crates/sgf-core/tests/snapshots/ops_map_colors/player_empire_flag_colours_meta.snap
---
source: crates/sgf-core/tests/common/mod.rs
expression: value
---
--- meta
+++ meta
@@ -51,10 +51,9 @@
 		"dark_blue"
 		"black"
 		"grey"
-		"intense_red"
-		"light_pink"
+		"grey"
+		"dark_blue"
 	}
-	use_map_color=yes
 }
 meta_fleets=15
 meta_planets=1
